# OpenSees-TCLgenerator

./: .gitignore  CMakeLists.txt  README.md
examples/: ex_1.cpp  example_basic.cpp
include/: AnalysisWriter.h  BCWriter.h  Config.h  ElementWriter.h  LoadPatternWriter.h  MaterialWriter.h  NodeWriter.h  RecorderWriter.h  SectionWriter.h  TimeSeriesWriter.h  utils.h
src/: AnalysisWriter.cpp  BCWriter.cpp  ElementWriter.cpp  LoadPatternWriter.cpp  MaterialWriter.cpp  NodeWriter.cpp  RecorderWriter.cpp  SectionWriter.cpp  TimeSeriesWriter.cpp  Utils.cpp  utils.cpp
